Fixed overlay & alignments on portfolio screenshots and added links to navbar to jump to correct section

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,21 +27,20 @@ h1 {
   background-image: url("../images/laptop-background-black.jpg");
   background-size: cover;
   background-position: center;
+  width: 100vw;
   height: 95vh;
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin-right: 0 auto;
-  padding: 5vw; }
+  justify-content: center; }
   .main-section h2 {
     font-family: "Six Caps", sans-serif;
     font-size: 1.7em;
     letter-spacing: 0.3em;
     word-spacing: 0;
     color: #A7A7A7; }
-
-img {
-  max-width: 100%; }
+  .main-section img {
+    max-width: 100%;
+    margin-left: 1.5em; }
 
 .about-me {
   width: 90%;
@@ -75,9 +74,28 @@ img {
   height: 36px;
   width: 36px; }
 
+#contact {
+  margin-top: 1em;
+  margin-bottom: .5em; }
+
+.contact a {
+  color: #606060; }
+
+footer {
+  background-color: #000000;
+  color: #ffffff;
+  height: 5vh;
+  position: absolute;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 55px;
+  width: 100%; }
+
 .navigation {
   height: 5vh;
   font-size: 1em; }
+  .navigation .navbar {
+    color: #000000; }
 
 .btn {
   border-radius: 0; }
@@ -87,11 +105,16 @@ img {
   padding-right: 17px; }
 
 .portfolio {
-  text-align: center;
+  text-align: left;
   background-color: #ffffff;
-  padding: 5em 0; }
+  padding-top: 1.5em; }
+
+#portfolio {
+  margin-bottom: 1rem; }
 
 .portfolio-item {
+  margin-top: 1em;
+  margin-left: 1em;
   position: relative;
   overflow: hidden; }
   .portfolio-item img {
@@ -116,6 +139,9 @@ img {
   font-family: "Six Caps", sans-serif;
   letter-spacing: 0.3em;
   word-spacing: 0;
-  font-size: 2.5rem;
+  font-size: 3.5rem;
   margin-bottom: auto;
   padding-left: 10px; }
+
+.portfolio-items button {
+  margin-left: 1.5em; }
